# drnpe

./: .gitignore  README.md  example.ipynb  example_robust.ipynb  gaussian_example.ipynb  pyproject.toml
drnpe/: data.py  encoder.py  networks.py  train.py
drnpe/conf/: config.yaml  config_drnpe.yaml  config_drnpe_flow.yaml  config_npe.yaml  config_npe_flow.yaml
examples/: gaussian.ipynb
experiments/cs/: cs.ipynb  data_cs.py
experiments/cs/conf/: config_cs_drnpe.yaml  config_cs_drnpe_flow.yaml  config_cs_npe.yaml  config_cs_npe_flow.yaml
experiments/gaussian/: data_gaussian.py  gaussian.ipynb  plots.ipynb
experiments/gaussian/conf/: config_drnpe.yaml  config_drnpe_flow.yaml  config_npe.yaml  config_npe_flow.yaml
experiments/sir/: data_sir.py  sir.ipynb
experiments/sir/conf/: config_sir_drnpe.yaml  config_sir_drnpe_flow.yaml  config_sir_npe.yaml  config_sir_npe_flow.yaml
trained_ckpts/: network_drnpe.ckpt  network_drnpe_dual.ckpt  network_drnpe_dual_flow.ckpt  network_drnpe_primal.ckpt  network_dual_drnpe.ckpt  network_dual_npe.ckpt  network_npe.ckpt  network_npe_flow.ckpt  network_primal_drnpe.ckpt  network_primal_npe.ckpt
