[project]
name = "drnpe"
version = "0.1.0"
description = "Distributionally Robust Neural Posterior Estimation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "hydra-core>=1.3.0",
    "lightning>=2.0.0",
    "matplotlib>=3.0.0",
    "nflows>=0.14",
    "tensorboard>=2.0.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "pre-commit>=4.0.0",
    "pymupdf>=1.27.2.2",
    "ruff>=0.8.0",
]
